# aliexpress-ds

./: .env.example  .gitignore  README.md  pyproject.toml
config/: category_blacklist.yaml  vps_inventory.yaml
deploy/: aliexpress-ds-bestsellers.service  aliexpress-ds-bestsellers.timer  aliexpress-ds-enqueue.service  aliexpress-ds-enqueue.timer  aliexpress-ds-queue-worker.service  aliexpress-ds-token-refresh.service  aliexpress-ds-token-refresh.timer
docs/: CATEGORY_CRAWL_COORDINATION.md  urls_index_distribution.md
scripts/: deploy_vps.sh
src/aliexpress_ds/: __init__.py  __main__.py  app_registry.py  bestsellers.py  categories.py  category_blacklist.py  category_lookup.py  cli.py  config.py  enrich.py  es.py  feed.py  freight.py  iop_client.py  keywords.py  product.py  queue.py  rate_limit.py  search.py  standard_mapper.py  token_store.py  url_parser.py
src/em_product/: __init__.py
