[project]
name = "aliexpress-ds"
version = "0.1.0"
description = "Fetch AliExpress Dropshipping product detail, price and stock from URL"
readme = "README.md"
authors = [
    { name = "SmileintheSky", email = "befruitful12@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "checkdigit>=0.5.0",
    "elasticsearch>=9.4.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
aliexpress-ds = "aliexpress_ds.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
